tools/architecture/validate-source-imports/tests/fixtures/invalid/contract-imports-adapter/src/schema.ts
import { apolloClient } from "@platform/adapters-graphql";
export type Schema = Record<string, unknown>;
